vault/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hashcorp
  name: vault
  labels:
    app: vault
spec:
  type: ClusterIP
  ports:
    - port: 8200
      targetPort: 8200
      protocol: TCP
      name: vault
  selector:
    app: vault
