vault/vault-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault
  namespace: hashcorp

spec:
  rules:
  - host: vault.redelocal
    http:
      paths:
      - path: /
        backend:
          serviceName: vault
          servicePort: 8200
